syntax= "proto3";

package chat;

option go_package="mgrankin-cloud.sso.v1;ssov4";

service Chat {
    rpc GetChat(GetChatRequest) returns (GetChatResponse);

    rpc UpdateChat(UpdateChatRequest) returns (UpdateChatResponse);

    rpc DeleteChat(DeleteChatRequest) returns (DeleteChatResponse);

    rpc MuteChat (MuteChatRequest) returns (MuteChatResponse) {}

    rpc PinChat (PinChatRequest) returns (PinChatResponse) {}
}

message GetChatRequest {
    int64 chat_id = 1;
}

message GetChatResponse {
    int64 chat_id = 1;
    string chat_name = 2;
    bytes photo = 3;
    ChatType chat_type = 5;
}

enum ChatType {
    CHAT_TYPE_UNSPECIFIED = 0;
    CHAT_TYPE_GROUP = 1;
    CHAT_TYPE_PERSONAL = 2;
}

message UpdateChatRequest {
    int64 chat_id = 1;
    string chat_name = 2;
    bytes photo = 3;
}

message UpdateChatResponse {
    int64 chat_id = 1;
    bool success = 2;
}

message DeleteChatRequest {
    int64 chat_id = 1;
}

message DeleteChatResponse {
    int64 chat_id = 1;
    bool success = 2;
}

message MuteChatRequest {
    int64 chat_id = 1;
    bool mute = 2;
}

message MuteChatResponse {
    bool success = 1;
}

message PinChatRequest {
    int64 chat_id = 1;
    bool pin = 2;
}

message PinChatResponse {
    bool success = 1;
}


